--- a/index.html
+++ b/index.html
@@ -21,16 +21,12 @@
 					<div id="intro">
 						<h1>Benjamin Victoria-Otero Portfolio<br />
 						</h1>
-						<p>Data Analyst skilled in SQL, Tableau, and Python.</p>
+						<p>Welcome to my Digital Space - where data meets insight.</p> </p>Aspiring data analyst with a passion for unraveling stories with numbers.</p> </p>Join me on this journey of exploration and discovery.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
 
-				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">Ben</a>
-					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
@@ -49,13 +45,13 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Data Cleaning in SQL<br />
+									<h2><a href="https://public.tableau.com/app/profile/benjamin.victoria.otero/vizzes"target= "_blank">Tableau Projects<br />
 									</a></h2>
-									<p>In this project we clean housing data in SQL Server.</p>
+									<p>Explore my Tableau projects, highlighting my ability to blend analytical skills with creativity.</p> </p>As an entry-level data analyst, I transform complex data into compelling stories through effective visualizations.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://public.tableau.com/app/profile/benjamin.victoria.otero/vizzes"target= "_blank" class="image main"><img src="images/Tableau.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="https://public.tableau.com/app/profile/benjamin.victoria.otero/vizzes"target= "_blank" class="button large">Enter Tableau</a></li>
 								</ul>
 							</article>
 
@@ -63,25 +59,25 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Data Exploration in SQL<br />
+										<h2><a href="https://github.com/benjaminotero/Covid-Data-Exploration/blob/main/UpdatedCovidInformation.sql"target= "_blank">Data Exploration in SQL<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Data exploration of Covid 19 Dataset in SQL Server</p>
+									<a href="https://github.com/benjaminotero/Covid-Data-Exploration/blob/main/UpdatedCovidInformation.sql"target= "_blank" class="image fit"><img src="images/covid19.jpg" alt="" /></a>
+									<p>Utilizing SQL analysis to uncover vital insights into vaccine, death and infection rates. This project provides a detailed perspective on the evolving pandemic landscape.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/benjaminotero/Covid-Data-Exploration/blob/main/UpdatedCovidInformation.sql"target= "_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 						<!-- Posts -->
 								<article>
 									<header>
-										<h2><a href="https://public.tableau.com/app/profile/benjamin.victoria.otero/vizzes"target= "_blank">Tableau Projects<br />
+										<h2><a href="https://github.com/benjaminotero/Data-Cleaning/blob/main/NashvilleHousingDataCleanup.sql"target= "_blank">Data Cleaning in SQL<br />
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/benjamin.victoria.otero/vizzes"target= "_blank" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>This is where I hold all of my Tableau Projects</p>
+									<a href="https://github.com/benjaminotero/Data-Cleaning/blob/main/NashvilleHousingDataCleanup.sql"target= "_blank" class="image fit"><img src="images/housingnashville.jpg" alt="" /></a>
+									<p>This project utilizes SQL Server to seemlessly transform raw housing data into an analysis-friendly format, making valuable insights easily accessible.</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/benjamin.victoria.otero/vizzes"target= "_blank" class="button">View Profile</a></li>
+										<li><a href="https://github.com/benjaminotero/Data-Cleaning/blob/main/NashvilleHousingDataCleanup.sql"target= "_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 						<!-- Posts -->
@@ -110,33 +106,6 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
-						<!-- Posts -->
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-						<!-- Posts -->
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-							</section>
 
 
 						<section class="split contact">
