--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/benjaminotero/Covid-Data-Exploration/blob/main/UpdatedCovidInformation.sql"target= "_blank" class="image fit"><img src="images/covid19.jpg" alt="" /></a>
-									<p>Utilizing SQL analysis to uncover vital insights into vaccine, death and infection rates. This project provides a detailed perspective on the evolving pandemic landscape.</p>
+									<p>Utilizing SQL analysis to uncover vital insights into COVID-19 vaccine, death, and infection rates. This project provides a detailed perspective on the evolving COVID-19 pandemic landscape.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/benjaminotero/Covid-Data-Exploration/blob/main/UpdatedCovidInformation.sql"target= "_blank" class="button">View Project</a></li>
 									</ul>
@@ -75,7 +75,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/benjaminotero/Data-Cleaning/blob/main/NashvilleHousingDataCleanup.sql"target= "_blank" class="image fit"><img src="images/housingnashville.jpg" alt="" /></a>
-									<p>This project utilizes SQL Server to seemlessly transform raw housing data into an analysis-friendly format, making valuable insights easily accessible.</p>
+									<p>This project utilizes SQL Server to seamlessly transform raw housing data from Nashville, TN into an analysis-friendly format, making valuable insights easily accessible.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/benjaminotero/Data-Cleaning/blob/main/NashvilleHousingDataCleanup.sql"target= "_blank" class="button">View Project</a></li>
 									</ul>
