--- a/index.html
+++ b/index.html
@@ -56,10 +56,36 @@
 							</article>
 
 						<!-- Posts -->
-							<section class="posts">
+						<section class="posts">
+						<article>
+							<header>
+								<h2><a href="https://github.com/benjaminotero/MySQL-Project-2"target= "_blank">US Household Income: Data Cleaning & Exploration (MySQL)<br />
+								</a></h2>
+							</header>
+							<a href="https://github.com/benjaminotero/MySQL-Project-2"target= "_blank" class="image fit"><img src="images/housing_income.jpg" alt="" /></a>
+							<p>Emplying MySQL, data cleaning and extraction were performed on the US household income dataset, revealing valuable insights specific to different states and cities.</p>
+							<ul class="actions special">
+								<li><a href="https://github.com/benjaminotero/MySQL-Project-2"target= "_blank" class="button">View Project</a></li>
+							</ul>
+						</article>	
+
+						<!-- Posts -->
+						<article>
+							<header>
+								<h2><a href="https://github.com/benjaminotero/MySQL-Project-1"target= "_blank">World Life Expectancy: Data Cleaning & Exploration (MySQL)<br />
+								</a></h2>
+							</header>
+							<a href="https://github.com/benjaminotero/MySQL-Project-1"target= "_blank" class="image fit"><img src="images/Life-Expectancy.png" alt="" /></a>
+							<p>Using MySQL, the world life expectancy dataset was cleaned and analyzed to extract key insights on life expectancy trends across various countries over multiple years.</p>
+							<ul class="actions special">
+								<li><a href="https://github.com/benjaminotero/MySQL-Project-1"target= "_blank" class="button">View Project</a></li>
+							</ul>
+						</article>						
+
+						<!-- Posts -->
 								<article>
 									<header>
-										<h2><a href="https://github.com/benjaminotero/Covid-Data-Exploration/blob/main/UpdatedCovidInformation.sql"target= "_blank">Data Exploration in SQL<br />
+										<h2><a href="https://github.com/benjaminotero/Covid-Data-Exploration/blob/main/UpdatedCovidInformation.sql"target= "_blank">COVID-19: Data Exploration (Microsoft SQL)<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/benjaminotero/Covid-Data-Exploration/blob/main/UpdatedCovidInformation.sql"target= "_blank" class="image fit"><img src="images/covid19.jpg" alt="" /></a>
@@ -71,15 +97,17 @@
 						<!-- Posts -->
 								<article>
 									<header>
-										<h2><a href="https://github.com/benjaminotero/Data-Cleaning/blob/main/NashvilleHousingDataCleanup.sql"target= "_blank">Data Cleaning in SQL<br />
+										<h2><a href="https://github.com/benjaminotero/Data-Cleaning/blob/main/NashvilleHousingDataCleanup.sql"target= "_blank">Housing Data: Data Cleaning (Microsoft SQL)<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/benjaminotero/Data-Cleaning/blob/main/NashvilleHousingDataCleanup.sql"target= "_blank" class="image fit"><img src="images/housingnashville.jpg" alt="" /></a>
-									<p>This project utilizes SQL Server to seamlessly transform raw housing data from Nashville, TN into an analysis-friendly format, making valuable insights easily accessible.</p>
+									<p>This project utilizes Microsoft SQL Server to seamlessly transform raw housing data from Nashville, TN into an analysis-friendly format, making valuable insights easily accessible.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/benjaminotero/Data-Cleaning/blob/main/NashvilleHousingDataCleanup.sql"target= "_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
+
+													
 
 						<section class="split contact">
 							<section class="alt">
